# modal-comfy-worker

./: .pre-commit-config.yaml  LICENSE  README.md  base_image.py  extra_model_paths.yaml  prompt.json  prompt_constructor.py  pyproject.toml  ruff.toml  snapshot.json  workflow.py
comfy/: comfy_utils.py  config.py  core.py  download_comfy.py  experimental.py  experimental_server.py  models.py  server.py
examples/basic_sdxl_example/: README.md  prompt.json  prompt_constructor.py  workflow.py
examples/preload_models_with_snapshotting/: README.md  workflow.py
examples/progress_tracking_with_websockets/: README.md  update_volume.py  workflow.py
lib/: base_volume_updater.py  image.py  json_encoder.py  logger.py  messaging.py  prompt_helpers.py
src/: prompt.json  prompt_constructor.py  workflow.py
src/comfy/: config.py  core.py  download_comfy.py  experimental.py  experimental_server.py  installer.py  job_progress.py  models.py  server.py
src/examples/basic_sdxl_example/: README.md  workflow.py
src/examples/preload_models_with_snapshotting/: README.md  snapshot.json  update_volume.py  workflow.py
src/examples/progress_tracking_with_websockets/: README.md  prompt_constructor.py  update_volume.py  workflow.py
src/lib/: base_image.py  constants.py  exceptions.py  image.py  logger.py  messaging.py  router.py  utils.py
src/volume_updaters/: huggingface-repo-copy.py  individual-hf-models.py
utils/: utils.py
volume_updaters/: huggingface-repo-copy.py  huggingface.example.py  huggingface_repo_copy.py  individual-hf-models.py  individual_hf_models.py
